--- a/src/gui/osci-render.fxml
+++ b/src/gui/osci-render.fxml
@@ -27,24 +27,24 @@
         <Label fx:id="rotateSpeedLabel" layoutX="316.0" layoutY="77.0" text="0" />
         <Slider fx:id="translationSpeedSlider" layoutX="116.0" layoutY="105.0" max="10.0" prefHeight="14.0" prefWidth="198.0" value="1.0" />
         <Label layoutX="14.0" layoutY="103.0" text="Translation speed" />
-        <Label fx:id="translationSpeedLabel" layoutX="316.0" layoutY="103.0" text="0" />
+        <Label fx:id="translationSpeedLabel" layoutX="316.0" layoutY="103.0" text="1" />
         <Slider fx:id="scaleSlider" layoutX="116.0" layoutY="130.0" max="10.0" prefHeight="14.0" prefWidth="198.0" value="1.0" />
         <Label layoutX="80.0" layoutY="128.0" text="Scale" />
-        <Label fx:id="scaleLabel" layoutX="316.0" layoutY="128.0" text="0" />
+        <Label fx:id="scaleLabel" layoutX="316.0" layoutY="128.0" text="1" />
         <Label layoutX="70.0" layoutY="50.0" text="Weight" />
         <TextField fx:id="translationXTextField" layoutX="136.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
         <Label layoutX="51.0" layoutY="18.0" text="Translation" />
         <Label layoutX="120.0" layoutY="18.0" text="x :" />
         <Label layoutX="217.0" layoutY="18.0" text="y :" />
         <TextField fx:id="translationYTextField" layoutX="234.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
-            <Slider fx:id="weightSlider" layoutX="116.0" layoutY="52.0" max="500.0" prefHeight="14.0" prefWidth="198.0" value="100.0" />
-            <Label fx:id="weightLabel" layoutX="316.0" layoutY="51.0" text="0" />
+            <Slider fx:id="weightSlider" layoutX="116.0" layoutY="52.0" max="1000.0" prefHeight="14.0" prefWidth="198.0" value="100.0" />
+            <Label fx:id="weightLabel" layoutX="316.0" layoutY="51.0" text="100" />
       </AnchorPane>
-      <TitledPane animated="false" collapsible="false" text="3D .obj file settings">
+      <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" text="3D .obj file settings">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <Slider fx:id="focalLengthSlider" blockIncrement="2.0" layoutX="116.0" layoutY="15.0" max="2.0" min="1.0E-5" prefHeight="14.0" prefWidth="198.0" value="1.0" />
           <Label layoutX="43.0" layoutY="14.0" text="Focal length" />
-          <Label fx:id="focalLengthLabel" layoutX="316.0" layoutY="14.0" text="0" />
+          <Label fx:id="focalLengthLabel" layoutX="316.0" layoutY="14.0" text="1" />
         </AnchorPane>
       </TitledPane>
     </SplitPane>
