--- a/src/main/resources/fxml/osci-render.fxml
+++ b/src/main/resources/fxml/osci-render.fxml
@@ -58,13 +58,23 @@
           <Slider fx:id="focalLengthSlider" blockIncrement="2.0" layoutX="116.0" layoutY="15.0" max="2.0" min="1.0E-5" prefHeight="14.0" prefWidth="198.0" value="1.0" />
           <Label layoutX="43.0" layoutY="14.0" text="Focal length" />
           <Label fx:id="focalLengthLabel" layoutX="316.0" layoutY="14.0" text="1" />
-               <TextField fx:id="cameraXTextField" layoutX="134.0" layoutY="39.0" prefHeight="26.0" prefWidth="58.0" text="0" />
-               <Label layoutX="44.0" layoutY="44.0" text="Camera pos" />
-               <Label layoutX="118.0" layoutY="44.0" text="x :" />
-               <Label layoutX="199.0" layoutY="43.0" text="y :" />
-               <TextField fx:id="cameraYTextField" layoutX="218.0" layoutY="39.0" prefHeight="26.0" prefWidth="58.0" text="0" />
-               <Label layoutX="283.0" layoutY="43.0" text="z :" />
-               <TextField fx:id="cameraZTextField" layoutX="302.0" layoutY="39.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+               <TextField fx:id="cameraXTextField" layoutX="134.0" layoutY="42.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+               <Label layoutX="44.0" layoutY="47.0" text="Camera pos" />
+               <Label layoutX="118.0" layoutY="47.0" text="x :" />
+               <Label layoutX="199.0" layoutY="46.0" text="y :" />
+               <TextField fx:id="cameraYTextField" layoutX="218.0" layoutY="42.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+               <Label layoutX="283.0" layoutY="46.0" text="z :" />
+               <TextField fx:id="cameraZTextField" layoutX="302.0" layoutY="42.0" prefHeight="26.0" prefWidth="58.0" text="-2.5" />
+               <Slider fx:id="objectRotateSpeedSlider" blockIncrement="2.0" layoutX="116.0" layoutY="83.0" max="1.0" prefHeight="14.0" prefWidth="198.0" value="0.1" />
+               <Label layoutX="36.0" layoutY="82.0" text="Rotate speed" />
+               <Label fx:id="objectRotateSpeedLabel" layoutX="316.0" layoutY="82.0" text="0.1" />
+               <TextField fx:id="rotateXTextField" layoutX="134.0" layoutY="111.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+               <Label layoutX="62.0" layoutY="116.0" text="Rotation" />
+               <Label layoutX="118.0" layoutY="116.0" text="x :" />
+               <Label layoutX="199.0" layoutY="115.0" text="y :" />
+               <TextField fx:id="rotateYTextField" layoutX="218.0" layoutY="111.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+               <Label layoutX="283.0" layoutY="115.0" text="z :" />
+               <TextField fx:id="rotateZTextField" layoutX="302.0" layoutY="111.0" prefHeight="26.0" prefWidth="58.0" text="0" />
         </AnchorPane>
       </TitledPane>
     </SplitPane>
