--- a/src/main/resources/fxml/osci-render.fxml
+++ b/src/main/resources/fxml/osci-render.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,67 +11,71 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="791.0" prefWidth="400.0" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="center" hgap="10" prefHeight="458.0" prefWidth="802.0" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints />
   </rowConstraints>
-  <AnchorPane prefHeight="874.0" prefWidth="400.0">
-    <Button fx:id="chooseFileButton" layoutX="8.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Choose File" />
-    <SplitPane dividerPositions="0.33168927250308256, 0.6707768187422933" layoutX="6.0" layoutY="135.0" orientation="VERTICAL" prefHeight="650.0" prefWidth="388.0">
-      <AnchorPane minHeight="0.0" minWidth="0.0">
-        <Slider fx:id="rotateSpeedSlider" blockIncrement="0.05" layoutX="116.0" layoutY="90.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
-        <Label layoutX="37.0" layoutY="88.0" text="Rotate speed" />
-        <Slider fx:id="translationSpeedSlider" blockIncrement="0.05" layoutX="116.0" layoutY="128.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
-        <Label layoutX="14.0" layoutY="126.0" text="Translation speed" />
-        <Slider fx:id="scaleSlider" blockIncrement="0.05" layoutX="116.0" layoutY="167.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-        <Label layoutX="80.0" layoutY="165.0" text="Scale" />
-        <Label layoutX="47.0" layoutY="50.0" text="Line weight" />
-        <TextField fx:id="translationXTextField" layoutX="136.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
-        <Label layoutX="51.0" layoutY="18.0" text="Translation" />
-        <Label layoutX="120.0" layoutY="18.0" text="x :" />
-        <Label layoutX="217.0" layoutY="18.0" text="y :" />
-        <TextField fx:id="translationYTextField" layoutX="234.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
-            <Slider fx:id="weightSlider" blockIncrement="1.0" layoutX="116.0" layoutY="52.0" majorTickUnit="100.0" max="1000.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="100.0" />
+  <AnchorPane prefHeight="458.0" prefWidth="808.0">
+      <AnchorPane layoutX="408.0" layoutY="26.0">
+         <children>
+          <Button fx:id="chooseFileButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Choose File" />
+          <Label fx:id="fileLabel" layoutX="132.0" layoutY="5.0" maxWidth="250.0" />
+            <Button fx:id="recordButton" layoutY="40.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Record" />
+            <Label fx:id="recordLabel" layoutX="132.0" layoutY="45.0" maxWidth="250.0" />
+            <Label fx:id="frequencyLabel" layoutY="80.0" />
+         </children>
       </AnchorPane>
-         <TitledPane animated="false" collapsible="false" text="Effects" SplitPane.resizableWithParent="false">
-           <content>
-             <AnchorPane minHeight="0.0" minWidth="0.0">
-                  <children>
-                     <CheckBox fx:id="vectorCancellingCheckBox" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Vector cancelling" />
-                     <Slider fx:id="vectorCancellingSlider" blockIncrement="0.05" disable="true" layoutX="141.0" layoutY="16.0" majorTickUnit="1.0" max="10.0" min="2.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" />
-                     <CheckBox fx:id="bitCrushCheckBox" layoutX="14.0" layoutY="52.0" mnemonicParsing="false" text="Bit crush" />
-                     <Slider fx:id="bitCrushSlider" blockIncrement="0.01" disable="true" layoutX="141.0" layoutY="55.0" majorTickUnit="0.5" max="3.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="2.0" />
-                     <CheckBox fx:id="verticalDistortCheckBox" layoutX="14.0" layoutY="93.0" mnemonicParsing="false" text="Vertical Distort" />
-                     <Slider fx:id="verticalDistortSlider" blockIncrement="0.005" disable="true" layoutX="141.0" layoutY="96.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="0.2" />
-                     <CheckBox fx:id="horizontalDistortCheckBox" layoutX="14.0" layoutY="136.0" mnemonicParsing="false" text="Horizontal Distort" />
-                     <Slider fx:id="horizontalDistortSlider" blockIncrement="0.005" disable="true" layoutX="141.0" layoutY="139.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="0.2" />
-                  </children>
-               </AnchorPane>
-           </content>
-         </TitledPane>
-      <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="385.0" text="3D .obj file settings" SplitPane.resizableWithParent="false">
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="155.0" prefWidth="384.0">
-          <Slider fx:id="focalLengthSlider" blockIncrement="0.01" layoutX="116.0" layoutY="15.0" majorTickUnit="0.2" max="2.0" min="1.0E-5" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-          <Label layoutX="43.0" layoutY="14.0" text="Focal length" />
-               <TextField fx:id="cameraXTextField" layoutX="134.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="0" />
-               <Label layoutX="44.0" layoutY="61.0" text="Camera pos" />
-               <Label layoutX="118.0" layoutY="61.0" text="x :" />
-               <Label layoutX="199.0" layoutY="60.0" text="y :" />
-               <TextField fx:id="cameraYTextField" layoutX="218.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="0" />
-               <Label layoutX="283.0" layoutY="60.0" text="z :" />
-               <TextField fx:id="cameraZTextField" layoutX="302.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="-2.5" />
-               <Slider fx:id="objectRotateSpeedSlider" blockIncrement="0.005" layoutX="116.0" layoutY="97.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
-               <Label layoutX="36.0" layoutY="96.0" text="Rotate speed" />
-               <CheckBox fx:id="rotateCheckBox" layoutX="90.0" layoutY="147.0" mnemonicParsing="false" text="Rotate with Mouse (Esc to disable)" />
-        </AnchorPane>
+      <TitledPane animated="false" collapsible="false" layoutX="408.0" layoutY="175.0" prefHeight="271.0" prefWidth="382.0" text="Effects">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="245.0" prefWidth="374.0">
+               <children>
+                  <CheckBox fx:id="vectorCancellingCheckBox" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Vector cancelling" />
+                  <Slider fx:id="vectorCancellingSlider" blockIncrement="0.05" disable="true" layoutX="141.0" layoutY="16.0" majorTickUnit="1.0" max="10.0" min="2.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" />
+                  <CheckBox fx:id="bitCrushCheckBox" layoutX="14.0" layoutY="52.0" mnemonicParsing="false" text="Bit crush" />
+                  <Slider fx:id="bitCrushSlider" blockIncrement="0.01" disable="true" layoutX="141.0" layoutY="55.0" majorTickUnit="0.5" max="3.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="2.0" />
+                  <CheckBox fx:id="verticalDistortCheckBox" layoutX="14.0" layoutY="93.0" mnemonicParsing="false" text="Vertical Distort" />
+                  <Slider fx:id="verticalDistortSlider" blockIncrement="0.005" disable="true" layoutX="141.0" layoutY="96.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="0.2" />
+                  <CheckBox fx:id="horizontalDistortCheckBox" layoutX="14.0" layoutY="136.0" mnemonicParsing="false" text="Horizontal Distort" />
+                  <Slider fx:id="horizontalDistortSlider" blockIncrement="0.005" disable="true" layoutX="141.0" layoutY="139.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="0.2" />
+                  <CheckBox fx:id="wobbleCheckBox" layoutX="14.0" layoutY="178.0" mnemonicParsing="false" text="Wobble" />
+                  <Slider fx:id="wobbleSlider" blockIncrement="0.005" disable="true" layoutX="141.0" layoutY="181.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" value="0.2" />
+               </children>
+            </AnchorPane>
+        </content>
       </TitledPane>
-    </SplitPane>
-    <Label fx:id="fileLabel" layoutX="140.0" layoutY="15.0" maxWidth="250.0" />
-      <Button fx:id="recordButton" layoutX="8.0" layoutY="50.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Record" />
-      <Label fx:id="recordLabel" layoutX="140.0" layoutY="55.0" maxWidth="250.0" prefWidth="1.0" />
-      <Label fx:id="frequencyLabel" layoutX="8.0" layoutY="90.0" />
+   <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" layoutX="11.0" layoutY="240.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="206.0" prefWidth="382.0" text="3D .obj file settings">
+     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="359.0">
+       <Slider fx:id="focalLengthSlider" blockIncrement="0.01" layoutX="116.0" layoutY="15.0" majorTickUnit="0.2" max="2.0" min="1.0E-5" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="1.0" />
+       <Label layoutX="43.0" layoutY="14.0" text="Focal length" />
+            <TextField fx:id="cameraXTextField" layoutX="134.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+            <Label layoutX="44.0" layoutY="61.0" text="Camera pos" />
+            <Label layoutX="118.0" layoutY="61.0" text="x :" />
+            <Label layoutX="199.0" layoutY="60.0" text="y :" />
+            <TextField fx:id="cameraYTextField" layoutX="218.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="0" />
+            <Label layoutX="283.0" layoutY="60.0" text="z :" />
+            <TextField fx:id="cameraZTextField" layoutX="302.0" layoutY="56.0" prefHeight="26.0" prefWidth="58.0" text="-2.5" />
+            <Slider fx:id="objectRotateSpeedSlider" blockIncrement="0.005" layoutX="116.0" layoutY="97.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
+            <Label layoutX="36.0" layoutY="96.0" text="Rotate speed" />
+            <CheckBox fx:id="rotateCheckBox" layoutX="90.0" layoutY="147.0" mnemonicParsing="false" text="Rotate with Mouse (Esc to disable)" />
+     </AnchorPane>
+   </TitledPane>
+   <AnchorPane layoutX="11.0" layoutY="14.0" minHeight="0.0" minWidth="0.0">
+     <Slider fx:id="rotateSpeedSlider" blockIncrement="0.05" layoutX="116.0" layoutY="90.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
+     <Label layoutX="37.0" layoutY="88.0" text="Rotate speed" />
+     <Slider fx:id="translationSpeedSlider" blockIncrement="0.05" layoutX="116.0" layoutY="128.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" />
+     <Label layoutX="14.0" layoutY="126.0" text="Translation speed" />
+     <Slider fx:id="scaleSlider" blockIncrement="0.05" layoutX="116.0" layoutY="167.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="1.0" />
+     <Label layoutX="80.0" layoutY="165.0" text="Scale" />
+     <Label layoutX="47.0" layoutY="50.0" text="Line weight" />
+     <TextField fx:id="translationXTextField" layoutX="136.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
+     <Label layoutX="51.0" layoutY="18.0" text="Translation" />
+     <Label layoutX="120.0" layoutY="18.0" text="x :" />
+     <Label layoutX="217.0" layoutY="18.0" text="y :" />
+     <TextField fx:id="translationYTextField" layoutX="234.0" layoutY="13.0" prefHeight="26.0" prefWidth="70.0" text="0" />
+         <Slider fx:id="weightSlider" blockIncrement="1.0" layoutX="116.0" layoutY="52.0" majorTickUnit="100.0" max="1000.0" prefHeight="38.0" prefWidth="247.0" showTickLabels="true" showTickMarks="true" value="100.0" />
+   </AnchorPane>
   </AnchorPane>
 </GridPane>
